# shorturl

./: .gitignore  Dockerfile  README.md  database.db  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/: config.py  crud.py  database.py  main.py  models.py  router.py
api/templates/: frontpage.html
static/: frontpage.html
tests/: test_main.py
