[tool.poetry]
name = "shorturl"
version = "0.1.0"
description = ""
authors = ["James Bloxham <11bloxhamj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
hashids = "^1.3.1"
pydantic = "^1.9.2"
SQLAlchemy = "^1.4.40"
uvicorn = "^0.18.3"
sqladmin = "^0.3.0"
flake8 = "^5.0.4"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
